Name: haskelldb-hdbc-odbc
Version: 2.0
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for the HDBC ODBC driver.

Flag split-base

Library
  Build-depends: 
    mtl >= 1 && < 2, 
    haskelldb >= 2 && < ,
    haskelldb-hdbc >= 1 && < 2,
    HDBC >= 2 && < 3,
    HDBC-odbc >= 2 && < 3

  if flag(split-base)
    Build-depends: base >= 3 && < 5
  else
    Build-depends: base < 3

  Exposed-Modules:
        Database.HaskellDB.HDBC.ODBC

Executable DBDirect-hdbc-odbc
  Main-is: DBDirect.hs
