Name: haskelldb-hdbc-odbc
Version: 2.1.1
Cabal-version: >= 1.6
Build-type: Simple
Copyright: The authors
Homepage: https://github.com/m4dc4p/haskelldb
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: LICENSE
Synopsis: HaskellDB support for the HDBC ODBC driver.
Description: HaskellDB requires this driver if HDBC will be used to connect to an ODBC database.
Category: Database

Library
  Build-depends: 
    mtl >= 1 && < 2.1, 
    haskelldb >= 2 && < 3,
    haskelldb-hdbc >= 2 && < 3,
    HDBC >= 2 && < 3,
    HDBC-odbc >= 2 && < 3,
    base >= 3 && < 5

  Exposed-Modules:
        Database.HaskellDB.HDBC.ODBC

Executable DBDirect-hdbc-odbc
  Main-is: DBDirect.hs

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
