Name: haskelldb-hdbc-postgresql
Version: 1.0
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for the HDBC PostgreSQL driver.

Flag split-base

Library
  Build-depends: 
    mtl >= 1 && < 2, 
    haskelldb >= 1 && < 2,
    haskelldb-hdbc >= 1 && < 2,
    HDBC >= 2 && < 3,
    HDBC-postgresql >= 2 && < 3

  if flag(split-base)
    Build-depends: base >= 3 && < 5
  else
    Build-depends: base < 3

  Exposed-Modules:
        Database.HaskellDB.HDBC.PostgreSQL
  ghc-options: -fwarn-incomplete-patterns

-- Note: Extra library and include directories must be passed on commandline:
-- cabal install --extra-include-dirs="F:\Program Files\PostgreSQL\8.4\include" --extra-include-dirs="F:\Program Files\PostgreSQL\8.4\include\server" --extra-lib-dirs="F:\Program Files\PostgreSQL\8.4\bin"
Executable DBDirect-hdbc-postgresql
  Main-is: DBDirect.hs
  Include-dirs: .
  Extra-Libraries: pq

