Name: haskelldb-hdbc-sqlite3
Version: 2.0
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Homepage: http://trac.haskell.org/haskelldb
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for the HDBC SQLite driver.

Library
  Build-depends: 
    mtl >= 1 && < 2, 
    haskelldb >= 2 && < 3,
    haskelldb-hdbc >= 1 && < 2,
    HDBC >= 2 && < 3, HDBC-sqlite3 >= 2 && < 3

  if flag(split-base)
    Build-depends: base >= 3 && < 5
  else
    Build-depends: base < 3

  Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
  Exposed-Modules:
        Database.HaskellDB.HDBC.SQLite3

Executable DBDirect-hdbc-sqlite3
  Main-is: DBDirect.hs
