Name: haskelldb-hdbc-sqlite3
Version: 2.1.1
Cabal-version: >= 1.6
Build-type: Simple
Copyright: The authors
Homepage: https://github.com/m4dc4p/haskelldb
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: LICENSE
Synopsis: HaskellDB support for the HDBC SQLite driver.
Description: HaskellDB requires this driver if HDBC will be used to connect to a SQLlite3 database.
Category: Database

Library
  Build-depends: 
    mtl >= 1 && < 2.1, 
    haskelldb >= 2 && < 3,
    haskelldb-hdbc >= 2 && < 3,
    HDBC >= 2 && < 3, HDBC-sqlite3 >= 2 && < 3,
    base >= 3 && < 5

  Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
  Exposed-Modules:
        Database.HaskellDB.HDBC.SQLite3

Executable DBDirect-hdbc-sqlite3
  Main-is: DBDirect.hs

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
