Name: haskelldb-hdbc
Version: 0.12
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for HDBC. You will also need one
          or more back-end specific packages.

Flag split-base

Library
  Build-depends: mtl, haskelldb>=0.12, HDBC>=2.0.0 && < 2.2.0, convertible >= 1.0.1
  if flag(split-base)
    Build-depends: base >= 3.0, containers, old-time
  else
    Build-depends: base < 3.0
  Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
  Exposed-Modules:
        Database.HaskellDB.HDBC
