Name: haskelldb-hdbc
Version: 2.2.1
Cabal-version: >= 1.6
Build-type: Simple
Copyright: The authors
Homepage: https://github.com/m4dc4p/haskelldb
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: LICENSE
Synopsis: HaskellDB support for HDBC.
Description: HaskellDB requires this driver to work with any of HDBC's drivers.
Category: Database

Library
  Build-depends: mtl >= 1 && < 2.1, haskelldb >= 2.2 && < 3, HDBC >= 2 && < 3, convertible >= 1.0.1 && < 2
  Build-depends: base >= 3 && < 5, containers >= 0.2 && < 1, old-time >= 1 && < 2
  Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
  Exposed-Modules:
        Database.HaskellDB.HDBC
  ghc-options: -fwarn-incomplete-patterns

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
