Name: haskelldb-hsql-odbc
Version: 1.0.0
Cabal-version: >= 1.6
Homepage: https://github.com/m4dc4p/haskelldb
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-File: LICENSE
Synopsis: HaskellDB support for the HSQL ODBC driver.
Category: Database

Library
  Build-depends: base >=3 && < 5, mtl, haskelldb==0.11, haskelldb-hsql==0.11, hsql, hsql-odbc
  Exposed-Modules:
        Database.HaskellDB.HSQL.ODBC

Executable DBDirect-hsql-odbc
  Main-is: DBDirect.hs

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
