Name: haskelldb-hsql-postgresql
Version: 0.11
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for the HSQL PostgreSQL driver.

Library
  Build-depends: base, mtl, haskelldb==0.11, haskelldb-hsql==0.11, hsql, hsql-postgresql
  Exposed-Modules:
        Database.HaskellDB.HSQL.PostgreSQL

Executable DBDirect-hsql-postgresql
  Main-is: DBDirect.hs
