Name: haskelldb-hsql-sqlite
Version: 0.10
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
build-depends: haskell98, base, mtl, haskelldb, haskelldb-hsql, hsql, hsql-sqlite
Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
Synopsis: HaskellDB support for the HSQL SQLite driver.
Exposed-Modules:
        Database.HaskellDB.HSQL.SQLite
ghc-options: -O2
