Name: haskelldb-hsql-sqlite3
Version: 0.11
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for the HSQL SQLite3 driver.

Library
  Build-depends: base, mtl, haskelldb==0.11, haskelldb-hsql==0.11, hsql, hsql-sqlite3
  Exposed-Modules:
        Database.HaskellDB.HSQL.SQLite3

Executable DBDirect-hsql-sqlite3
  Main-is: DBDirect.hs
