Name: haskelldb-hsql
Version: 0.11
Cabal-version: >= 1.2
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
Synopsis: HaskellDB support for HSQL. You will also need one
          or more back-end specific packages.

Flag split-base

Library
  Build-depends: mtl, haskelldb==0.11, hsql
  if flag(split-base)
    Build-depends: base >= 3.0, old-time
  else
    Build-depends: base < 3.0
  Exposed-Modules:
        Database.HaskellDB.HSQL
