Name: haskelldb-hsql
Version: 1.0.0
Cabal-version: >= 1.6
Build-type: Simple
Homepage: https://github.com/m4dc4p/haskelldb
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: LICENSE
Synopsis: HaskellDB support for HSQL. 
Category: Database

Flag split-base

Library
  Build-depends: mtl, haskelldb==0.11, hsql
  if flag(split-base)
    Build-depends: base >= 3.0 && < 5, old-time
  else
    Build-depends: base < 3.0
  Exposed-Modules:
        Database.HaskellDB.HSQL

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
