Name: haskelldb-wx
Version: 0.11
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
build-depends: haskell98, base, mtl, haskelldb==0.11, wxcore
Extensions: CPP,
            ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
Synopsis: HaskellDB support for WXHaskell.
Exposed-Modules:
        Database.HaskellDB.WX
ghc-options: -O2
