Name: haskelldb-wx
Version: 1.0.0
Cabal-version: >= 1.6
Build-type: Simple
Copyright: The authors
Homepage: https://github.com/m4dc4p/haskelldb
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: ../LICENSE
Category: Database
Synopsis: HaskellDB support for WXHaskell.

build-depends: haskell98, base, mtl, haskelldb==0.11, wxcore

Library
  Extensions: CPP,
    ExistentialQuantification,
    OverlappingInstances,
    UndecidableInstances,
    MultiParamTypeClasses
  Exposed-Modules:
    Database.HaskellDB.WX

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
